--- a/css/style.css
+++ b/css/style.css
@@ -21,3 +21,27 @@ img {
   display: block;
   max-width: 100%; /*Máximo tamanho da imagem apenas qnd redimensionar.*/
 }
+
+/*Superinfo*/
+
+.superinfo-bg {
+  background: #122ab2;
+  color: wheat;
+}
+
+.superinfo-bg a {
+  color: wheat;
+}
+
+.superinfo {
+  max-width: 960px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  padding-top: 10px;
+}
+
+.superinfo p, a {
+  margin: 0 10px 10px 10px;
+}
