--- a/css/style.css
+++ b/css/style.css
@@ -172,3 +172,119 @@ img {
 .blue {
   border-top: 8px solid #66d9eb;
 }
+
+/*Preço*/
+
+.preco {
+  background: #f7f7f7;
+  padding: 60px;
+  /* max-width: 960px; */
+  margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: flex-end;
+}
+
+.preco-item {
+  flex: 1;
+  border: 4px solid wheat;
+  padding: 20px;
+  margin: 10px;
+}
+
+.preco-item h2 {
+  font-size: 3em;
+  color: #a4a4a4;
+  text-align: center;
+}
+
+.preco-item span {
+  margin: 20px auto;
+  display: block;
+  text-align: center;
+  font-weight: bold;
+  border-top: 4px solid wheat;
+  border-bottom: 4px solid wheat;
+  padding: 10px 0 5px 0;
+  font-size: 3em;
+  max-width: 250px;
+}
+
+.preco-item sup {
+  font-size: 1.5rem;
+}
+
+.preco-item ul {
+  margin: 20px auto;
+  font-size: 1.25em;
+  /* line-height: 2; */
+  font-style: italic;
+  color: #7c7c7c;
+  max-width: 250px;
+}
+
+.preco-item li {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 15px;
+}
+
+.preco-item li::after {
+  content: '';
+  display: block;
+  width: 6px;
+  height: 6px;
+  background: #2c70ff;
+  border-radius: 50%;
+}
+
+.preco-item a {
+  max-width: 250px;
+  display: block;
+  margin: 20px auto;
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 2.25em;
+  font-weight: bold;
+  padding: 15px 0;
+  color: #222222;
+  border: 4px solid;
+  border-radius: 10px;
+}
+
+/* .preco-item:nth-child(1):hover a {
+  color: #a3613b;
+}
+.preco-item:nth-child(2):hover a {
+  color: #7b7d83;
+}
+.preco-item:nth-child(3):hover a {
+  color: #cdcf2f;
+} */
+
+.preco-item:nth-child(1):hover a {
+  color: whitesmoke;
+  background: #a3613b;
+}
+.preco-item:nth-child(2):hover a {
+  color: whitesmoke;
+  background: #7b7d83;
+}
+.preco-item:nth-child(3):hover a {
+  color: whitesmoke;
+  background: #b5b809;
+}
+
+@media (max-width: 800px) {
+  .preco {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+  .preco .preco-item:nth-child(3) {
+    order: -2;
+  }
+  .preco .preco-item:nth-child(2) {
+    order: -1;
+  }
+}
